--- a/templates/base.html
+++ b/templates/base.html
@@ -13,8 +13,10 @@
     <!-- CSS Específico deste projeto -->
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <link rel="stylesheet" href="{% static 'css/produtos.css' %}">
+    <link rel="stylesheet" href="{% static 'css/pedidos.css' %}">
+    <link rel="stylesheet" href="{% static 'css/contato.css' %}">
 </head>
-<body>
+<body style="background-color: rgb(46, 46, 56); color: white;">
 {% include 'barra_navegacao.html' %}
 <div class="container-fluid">
     {% block conteudo %}
