--- a/templates/carrinho/detalhes_carrinho.html
+++ b/templates/carrinho/detalhes_carrinho.html
@@ -43,6 +43,6 @@
     </tbody>
 </table>
 <a href="{% url 'produtos:listar_produtos' %}">Comprar mais produtos</a>
-<a href="#">Finalizar</a>
+<a href="{% url 'pedidos:criar_pedido' %}"> Finalizar</a>
 {% endif %}
 {% endblock %}
