--- a/templates/produtos/produtos.html
+++ b/templates/produtos/produtos.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
 {% block conteudo %}
+
 <h2>Categorias</h2>
 <a href="/produtos">Todas as categorias</a>
 {% for categoria in lista_categorias %}
 <a href="{{ categoria.get_absolute_url }}">{{ categoria.nome }}</a>
 {% endfor %}
+
 <h2>Produtos</h2>
 <div class="produtos__container">
     {% for produto in lista_produtos %}
@@ -14,12 +16,40 @@
         </a>
         <div class="card-body">
             <p class="card-title">{{ produto.nome }}</p>
-            <p> R${{ produto.preco }}</p>
+            <p style="color: black;"> R${{ produto.preco }}</p>
             <a href="{{ produto.get_absolute_url }}" class="btn btn-primary">Ver mais detalhes...</a>
         </div>
     </div>
     {% endfor %}
 </div>
+<style>
 
+.produtos__container {
+    width: 90vw;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.produto__img {
+    width: 150px;
+}
+
+.produto__card {
+    margin: 5px;
+    width: 15rem;
+    padding: 10px;
+}
+
+.card-title{
+    font-size: 1.2rem;
+    color: black;
+    font-weight: bolder;
+}
+</style>
 {% endblock conteudo %}
+
+
+
 
